--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "google-auth-library": "^9.10.0",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "moongoose": "^0.0.5",
